[package]
name = "benchkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
rand = "0.9.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
